@@ -99,9 +99,8 @@ public class RenameTest {
         assertNotNull(folder);
 
         // store document
-        final byte data[] = srcDocContent.getBytes(UTF_8);
         final java.io.File tmpStoreFile = tempFolder.newFile();
-        Files.write(tmpStoreFile.toPath(), data);
+        Files.writeString(tmpStoreFile.toPath(), srcDocContent);
         final String tmpFileName = tmpStoreFile.getName() + "." + srcDocName;
         assertNotNull(folder.uploadFile(tmpFileName, tmpStoreFile, null));
 
@@ -115,6 +114,6 @@ public class RenameTest {
         assertEquals(expectedMediaType, ((File) srcResource).contentType);
         final java.io.File tempRetrievedSrcFile = tempFolder.newFile();
         srcResource.downloadTo(tempRetrievedSrcFile, null);
-        assertEquals(srcDocContent, new String(Files.readAllBytes(tempRetrievedSrcFile.toPath()), UTF_8));
+        assertEquals(srcDocContent, Files.readString(tempRetrievedSrcFile.toPath()));
     }
 }
